--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,2 +1,10 @@
 <div> I'm the server-Component!</div>
 <div>我会被再入的</div>
+
+<div class="flexBox">
+  <div class="firstDemoBox">
+    <div>这是一个flex box</div>
+    <button>  了解更多  </button>
+  </div>
+</div>
+
