html, flex, Bootstrap

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,3 +1,4 @@
+<!--
 <div> I'm the server-Component!</div>
 <div>我会被再入的</div>
 
@@ -7,4 +8,65 @@
     <button>  了解更多  </button>
   </div>
 </div>
+-->
+
+<div class="container">
+
+  <nav>
+    <ul class="navigation">
+      <li><span class="bulletText">Home</span></li>
+      <li><span class="bulletText">Taco Menu</span></li>
+      <li><span class="bulletText">Draft List</span></li>
+      <li><span class="bulletText">Hours</span></li>
+      <li><span class="bulletText">Directions</span></li>
+      <li><span class="bulletText">Contact</span></li>
+    </ul>
+  </nav>
+
+  <section>Section的margin-left样式确保了有足够的空间容纳nav元素</section>
+
+  <section>
+    A sticky element toggles between relative and fixed, depending on the scroll position.
+    It is positioned relative until a given offset position is met in the viewport - then it "sticks"
+    in place (like position:fixed).When elements are positioned, they can overlap other elements.
+    The z-index property specifies the stack order of an element (which element should be placed in
+    front of, or behind, the others).
+    An element can have a positive or negative stack order:
+    How to add bullet colors for by removing their default bullets and
+  </section>
+
+  <section>注意观察当你调整浏览器窗口时发生了什么。效果很赞！</section>
+
+
+</div>
+
+
+<div class="row">
+  <div class="col-8" style="border-bottom:5px solid red;border-top:5px solid red;border-left: 5px solid red; border-right: 5px solid red">col-8</div>
+  <div class="col-4" style="border-bottom:5px solid red;border-top:5px solid red;">col-4</div>
+</div>
+
+<hr>
+
+<div style="display: flex">
+  <div class="firstDemoBox">xx</div>
+  <div class="firstDemoBox">xx</div>
+  <div class="firstDemoBox">xx</div>
+  <div class="firstDemoBox">xx</div>
+  <div class="firstDemoBox">xx</div>
+  <div class="firstDemoBox">xx</div>
+</div>
+
+<hr>
+
+<div id="page">
+
+  <div class="main">
+    <div class="sub"></div>
+  </div>
+  <!--
+  <div class="nav"></div>
+  -->
+</div>
+
 
