--- a/src/app/server/server.component.css
+++ b/src/app/server/server.component.css
@@ -1,4 +1,78 @@
 .firstDemoBox{
   width:180px;
   height:160px;
+  border: 3px solid green;
 }
+
+.container{
+  position:relative;
+  border: 3px solid green;
+  height:150%;
+  width:100%;
+  left:0px;
+  margin-left:0px
+}
+
+nav{
+  display:inline-block;
+  vertical-align: top;
+  position:absolute;
+  left:0px;
+  width:19%;
+  border: 3px solid red;
+
+}
+
+section {
+  position:relative;
+  display: inline-block;
+  width: 83%;
+  height: 100%;
+  border: 3px solid orange;
+  background-color: white;
+  margin-left:201px;
+  padding: 5px;
+}
+
+footer{
+  position:fixed;
+  bottom:0;
+  left:0;
+  height:70px;
+  background-color: white;
+  width:100%
+}
+
+body{
+  margin-bottom:120px;
+}
+
+ul.navigation {
+  list-style-type: inherit;
+  color:black;
+}
+
+span.bulletText {
+  color:red;
+}
+
+#page {
+  display:block;
+  position:relative;
+  width: 1000px;
+  height:1000px;
+  background: lawngreen;
+}
+.nav { width: 200px; float: right; }
+.main {
+  display:inline-block;
+  background:white;
+  position:absolute;
+  margin-left: 200px;
+  vertical-align: center;
+  width: 200px; float: left; padding-left: 510px;
+}
+.sub { width: 100px; float: left; margin: 10px 0 10px -100px; }
+.main { border: 1px solid #000; }
+.nav, .sub { border: 1px dashed #000; height: 300px; }
+.sub { height: 280px; }
